# SEOAutomation

./: CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: seo-backlinks.md
data/: google-updates.json
docs/: INSTALLATION.md  TROUBLESHOOTING.md  WORKFLOW-public-private.md
extensions/brightdata/: README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
extensions/brightdata/agents/: seo-brightdata.md
extensions/brightdata/docs/: BRIGHTDATA-SETUP.md
extensions/brightdata/skills/seo-brightdata/: SKILL.md
hooks/: hooks.json  validate-schema.py
scripts/: drift_baseline.py  fetch_page.py  google_auth.py  google_report.py  render_page.py  seo_updates.py  sync_flow.py
skills/seo/: SKILL.md
skills/seo-backlinks/: SKILL.md
skills/seo-schema/: SKILL.md
skills/seo-sxo/references/: page-type-taxonomy.md  wireframe-templates.md
tests/: test_google_report_full_audit.py  test_manifest_consistency.py  test_render_page.py
